5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1667_2966.log
== TEST (2019-04-16 17:36:09) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*preco
desc = (var-(var*20/100))
if(Prog == "S"):
	print(round(desc, 1)
else:
	print(var)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:36:40) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*preco
desc = (var-(var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = quant*preco
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:37:15) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var-(var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- EXECUTION TIME:
0.158412
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.5
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:37:16) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var-(var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:37:45) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:37:59) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- EXECUTION TIME:
0.122163
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.5
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:38:02) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- EXECUTION TIME:
0.139354
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.5
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:38:10) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:38:29) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:38:41) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 1))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:39:16) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print(var)
-- EXECUTION TIME:
0.155912
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:39:17) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print(var)
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:39:29) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print(var)
-- EXECUTION TIME:
0.164021
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:41:30) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print("var")
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:41:59) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print(round(var, 2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:42:13) 
-- CODE:
Prog = input("S/N")
Preco = float(input("valor ing"))
quant = int(input("quantidade"))
var = quant*Preco
desc = (var - (var*20/100))
if(Prog == "S"):
	print(round(desc, 2))
else:
	print(round(var, 2))
-- EXECUTION TIME:
0.167818
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
